fixed spacing in HTML and added comments to index HTML

--- a/css/index.css
+++ b/css/index.css
@@ -96,7 +96,7 @@ nav a{
 }
 
 header img{
-    margin: 1% auto;
+    margin: 2% auto;
 }
 
 /* homepage top content */
